DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2003-08-31 allenb   Added interface to ObjectReader for resetting the reader
                    to the intial read state for another read pass.
                    NEW VERSION: 0.27.8
2003-08-31 allenb   Refactored vprASSERT to print stacktrace.  Refined stack
                    trace output slightly.
                    NEW VERSION: 0.27.8
2003-08-31 allenb   Added vpr::SystemBase::getStackTrace().
                    NEW VERSION: 0.27.7
2003-08-11 patrickh Added vpr::LibraryLoader.
                    NEW VERSION: 0.27.6
2003-06-30 aronb    Added new debug output level vprDBG_CONFIG_STATUS_LVL.
                    Changed the ordering of the levels so vprDBG_WARNING_LVL
                    comes after vprDBG_CRITICAL_LVL and vprDBG_CONFIG_LVL
                    comes after vprDBG_CONFIG_STATUS_LVL.
                    vprDBG_CONFIG_STATUS_LVL is now the default level.
                    NEW VERSION: 0.27.5
2003-06-18 patrickh Fixed a problem where bools were not serialized correctly
                    on Darwin/Mac OS X.
                    NEW VERSION: 0.27.4
2003-05-30 pallindo Fixed a problem where serial ports on Win32 would open in
                    the wrong blocking mode sometimes.
                    NEW VERSION: 0.27.3
2003-04-26 patrickh configure.in requries Autoconf 2.53 or newer.
2003-04-25 patrickh Fixed a problem in vpr::LibraryUNIX::load() where
                    dynamically loaded code could not dynamically load other
                    code.
                    NEW VERSION: 0.27.2
2003-04-14 patrickh Added vpr::DsoLoader.
                    NEW VERSION: 0.27.1
2003-03-20 patrickh Updated to require Boost 1.30.0.
                    NEW VERSION: 0.27.0
2003-03-14 patrickh Fixed a bug in the vpr::ThreadPosix constructors where the
                    scope parameter was ignored.  Set the default value for the